2010-01-30  vadim  <vadim@vk.crocodile.org>

	* ../src/gui/FirewallDialog.cpp (FirewallDialog::applyChanges):
	fixes #1171: the warning dialog asking if ip address objects
	should be renamed automatically appears twice. when user renames
	cluster, firewall, host or interface object, the GUI asks if they
	want to rename ip address objects as well to make them adhere to
	some naming convention. The warning dialog appeared twice on Mac
	and Windows with Qt 4.6

2010-01-29  vadim  <vadim@vk.crocodile.org>

	* ../src/res/configlets/linux24/installer_commands_reg_user: try
	to cancel reboot only if one is pending. This avoids a warning
	saying "cant find pid of running shutdown" every time user
	installs updated iptables script on Linux firewall. Fixes #1169
	Fwbuilder can schedule reboot in a few minutes if user installs
	updated policy in "test mode" and requests reboot as a brute-force
	rollback to safeguard against locking themselves out of the
	firewall in case of error in the policy.

	* ../src/gui/ObjectManipulator_ops.cpp (ObjectManipulator::autorename):
	cluster failover group objects are now included in the algorithm
	that automatically renames addresses of interfaces when user
	renames firewall or cluster object. Fixes #1170

	* ../src/gui/ObjectManipulator_slots.cpp (ObjectManipulator::copyObj):
	show a not on the status bar whenever user copies an object to
	clipboard. fixes #1167

2010-01-28  vadim  <vadim@vk.crocodile.org>

	* ../src/gui/ProjectPanel.cpp (ProjectPanel::isManipulatorSelected):
	fixes #1130 "Ctrl-C , Ctrl-V shortcuts do not work for selected
	objects in rule elements". Global keyboard shortcuts Ctrl-C,
	Ctrl-V, Ctrl-X should work on objects in rule elements when
	keyboard focus belongs to the rule set view or on objects in the
	tree when focus is on the tree. This also fixes #1138 "ctrl+x and
	edit->cut problems in both Policy and NAT". These keyboard
	shortcuts operate only on objects in the tree and rule elements