@@ -1,5 +1,10 @@
 2010-01-30  vadim  <vadim@vk.crocodile.org>
 
+	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::insertFailoverRule):
+	fixes #1174 "OUTPUT rule is not generated for
+	heartbeat". Automatically generated rules for cluster members using
+	heartbeat should be placed in both INPUT and OUTPUT chains.
+
 	* ../src/gui/FirewallDialog.cpp (FirewallDialog::applyChanges):
 	fixes #1171: the warning dialog asking if ip address objects
 	should be renamed automatically appears twice. when user renames
